Improve parsers Fix traverse FiniteList Improve pipeline